clusters/talos-cluster/livekit/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: livekit-route
  namespace: livekit
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cloudflare-gateway
  hostnames:
    - "livekit.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: livekit-server
          port: 7880
